# cookie-poetry

./: .cookiecutterrc  CODE_OF_CONDUCT.md  README.md
hooks/: post_gen_project.py
{{cookiecutter.repository_name}}/: .cookiecutterrc  .gitlab-ci.yml  CODE_OF_CONDUCT.md  Makefile  coverage.ini  mkdocs.yml  pyproject.toml
{{cookiecutter.repository_name}}/docs/: conf.py  index.md  spelling_wordlist.txt
{{cookiecutter.repository_name}}/scripts/: gen-credits-data.py  gen-readme-data.py  update-spelling-wordlist.sh
{{cookiecutter.repository_name}}/scripts/templates/: CREDITS.md  README.md
{{cookiecutter.repository_name}}/src/{{cookiecutter.python_package_import_name}}/: cli.py
{{cookiecutter.repository_name}}/tests/: __init__.py
