[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.python_package_distribution_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_fullname }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.copyright_license }}"
readme = "README.md"
repository = "https://{{ cookiecutter.repository_provider }}/{{ cookiecutter.repository_namespace }}/{{ cookiecutter.repository_name }}"
homepage = "https://{{ cookiecutter.repository_provider }}/{{ cookiecutter.repository_namespace }}/{{ cookiecutter.repository_name }}"
keywords = []
packages = [ { include = "{{ cookiecutter.python_package_import_name }}", from = "src" } ]
include = [
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
bandit = "^1.5"
black = { version = "*", allows-prereleases = true }
flake8 = "^3.6"
ipython = "^7.2"
isort = { version = "^4.3", extras = ["pyproject"] }
jinja2-cli = { git = "https://github.com/mattrobenolt/jinja2-cli.git" }
pytest = "^4.3"
pytest-cov = "^2.6"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.26"
recommonmark = "^0.4.0"
safety = "^1.8"
sphinx = "^1.8"
sphinxcontrib-spelling = "^4.2"
sphinx-rtd-theme = "^0.4.2"
toml = "^0.10.0"

[tool.poetry.scripts]
{{ cookiecutter.python_package_command_line_name }} = "{{ cookiecutter.python_package_import_name }}.cli:main"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "{{ cookiecutter.python_package_import_name }}"
include_trailing_comma = true
